src/297D-diverse-051414/010/compilerOutput010.txt
src\010\WriteTest.java:12: error: unclosed string literal
        StringArray[k] = "/* " + String.toString(k) + "*/ " + StringArray[]";
                                                                           ^
1 error
